# alife-python

./: README.md  config.py  main.py  pyproject.toml
tests/: test_actor.py  test_faction.py  test_grid.py  test_pathfinder.py  test_squad.py  test_tasks.py
